--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_time_picker_spinner: ^1.0.6
+  flutter_launcher_icons: ^0.7.4
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 dev_dependencies:
   flutter_test:
